verbose output can be turned on/off during build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required (VERSION 2.8)
 project (thinkpad-fan) 
 
+option (VERBOSE "print additional information to STDOUT" OFF)
+
+configure_file (sources/config.h.in ${CMAKE_BINARY_DIR}/sources/config.h)
+include_directories (${CMAKE_BINARY_DIR}/sources/)
+
 set (SOURCES
 	sources/main.c
 )
